--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,9 +18,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sing in"
+        android:text="Iniciar sesión"
         android:textSize="50dp"
         android:textColor="@color/white"
+        android:layout_marginTop="20dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +33,8 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="3dp"
-
-        tools:layout_editor_absoluteY="107dp">
+        tools:layout_editor_absoluteX="-52dp"
+        tools:layout_editor_absoluteY="-30dp">
 
         <TextView
             android:id="@+id/textView5"
@@ -43,7 +43,7 @@
             android:layout_marginTop="100dp"
             android:background="@color/cardview_shadow_end_color"
             android:shadowColor="@color/black"
-            android:text="Username"
+            android:text="Usuario"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,18 +53,18 @@
             android:id="@+id/editTextText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#bc4ed8"
             android:ems="10"
             android:inputType="text"
-            android:text="username"
-            android:textColor="@color/white"
-            android:background="#bc4ed8"/>
+            android:text="nombre de usuario"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:text="Password"
+            android:text="Contraseña"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,42 +74,78 @@
             android:id="@+id/editTextTextPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#bc4ed8"
             android:ems="10"
             android:inputType="textPassword"
-            android:background="#bc4ed8"
+            android:text="contrasenia"
             android:textColor="@color/material_dynamic_neutral10" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp"
-
+            android:textSize="20dp"
+            android:text="Acceder"
             tools:layout_editor_absoluteX="173dp"
             tools:layout_editor_absoluteY="332dp"
-            android:layout_gravity="center"/>
+            android:background="#102444"/>
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forget password?"
-            android:textColor="#bc4ed8"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
+            android:text="¿Olvidaste tu contraseña?"
+            android:textColor="#bc4ed8"
+            android:textSize="15dp"
             tools:layout_editor_absoluteX="172dp"
-            tools:layout_editor_absoluteY="396dp"
-            android:layout_gravity="center"/>
+            tools:layout_editor_absoluteY="396dp" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="o quieres continuar con:"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="538dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:textSize="20sp"/>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="60dp"
+                android:layout_height="180dp"
+                app:srcCompat="@drawable/logo_facebook" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="60dp"
+                android:layout_height="180dp"
+                app:srcCompat="@drawable/logo_google"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"/>
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="60dp"
+                android:layout_height="180dp"
+                app:srcCompat="@drawable/logo_twitter" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="or sing in with"
-        tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="538dp" />
 
 
 
